import { snapshotTest } from 'testing';

describe('NavBar demo snapshot', () => {
  snapshotTest('NavBar');
});
