// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavBar demo snapshot > NavBar demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-navbar"
    >
      <div
        class="bui-navbar-left"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon bui-navbar-icon"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M16.4 48 50 17.2c1.2-1.1 1.3-3 .2-4.2-1.1-1.2-3-1.3-4.2-.2l-36 33a2.97 2.97 0 0 0 0 4.4l36 33c1.2 1.1 3.1 1 4.2-.2s1-3.1-.2-4.2L16.4 48z"
          />
        </svg>
      </div>
      <div
        class="bui-navbar-title ellipsis"
      />
      <div
        class="bui-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`NavBar demo snapshot > NavBar demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 50px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-navbar"
    >
      <div
        class="bui-navbar-left"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="m48 43.7 25.8-25.8c1.2-1.2 3.1-1.2 4.3 0 1.2 1.2 1.2 3.1 0 4.3L52.3 48l25.8 25.8c1.2 1.2 1.2 3.1 0 4.3s-3.1 1.2-4.3 0L48 52.3 22.2 78.1c-1.2 1.2-3.1 1.2-4.3 0-1.2-1.2-1.2-3.1 0-4.3L43.7 48 17.9 22.2c-1.2-1.2-1.2-3.1 0-4.3 1.2-1.2 3.1-1.2 4.3 0L48 43.7z"
          />
        </svg>
      </div>
      <div
        class="bui-navbar-title ellipsis"
      >
        标题文案
      </div>
      <div
        class="bui-navbar-right"
      />
    </div>
    <div
      class="bui-navbar"
    >
      <div
        class="bui-navbar-left"
      />
      <div
        class="bui-navbar-title ellipsis"
      >
        标题文案
      </div>
      <div
        class="bui-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`NavBar demo snapshot > NavBar demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-navbar"
    >
      <div
        class="bui-navbar-left"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon bui-navbar-icon"
          color="#ff335c"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M16.4 48 50 17.2c1.2-1.1 1.3-3 .2-4.2-1.1-1.2-3-1.3-4.2-.2l-36 33a2.97 2.97 0 0 0 0 4.4l36 33c1.2 1.1 3.1 1 4.2-.2s1-3.1-.2-4.2L16.4 48z"
          />
        </svg>
      </div>
      <div
        class="bui-navbar-title ellipsis"
      >
        标题文案
      </div>
      <div
        class="bui-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`NavBar demo snapshot > NavBar demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 50px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-navbar"
    >
      <div
        class="bui-navbar-left"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon bui-navbar-icon"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M16.4 48 50 17.2c1.2-1.1 1.3-3 .2-4.2-1.1-1.2-3-1.3-4.2-.2l-36 33a2.97 2.97 0 0 0 0 4.4l36 33c1.2 1.1 3.1 1 4.2-.2s1-3.1-.2-4.2L16.4 48z"
          />
        </svg>
        返回
      </div>
      <div
        class="bui-navbar-title ellipsis"
      />
      <div
        class="bui-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`NavBar demo snapshot > NavBar demo snapshot 0 5`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 50px; --flex-wrap: nowrap; width: 375px;"
    >
      <div
        class="bui-navbar"
      >
        <div
          class="bui-navbar-left"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon bui-navbar-icon"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M16.4 48 50 17.2c1.2-1.1 1.3-3 .2-4.2-1.1-1.2-3-1.3-4.2-.2l-36 33a2.97 2.97 0 0 0 0 4.4l36 33c1.2 1.1 3.1 1 4.2-.2s1-3.1-.2-4.2L16.4 48z"
            />
          </svg>
        </div>
        <div
          class="bui-navbar-title ellipsis"
        >
          标题文案
        </div>
        <div
          class="bui-navbar-right"
        />
      </div>
      <div
        class="bui-navbar"
      >
        <div
          class="bui-navbar-left"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon bui-navbar-icon"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M16.4 48 50 17.2c1.2-1.1 1.3-3 .2-4.2-1.1-1.2-3-1.3-4.2-.2l-36 33a2.97 2.97 0 0 0 0 4.4l36 33c1.2 1.1 3.1 1 4.2-.2s1-3.1-.2-4.2L16.4 48z"
            />
          </svg>
        </div>
        <div
          class="bui-navbar-title ellipsis"
        >
          这个标题文案很长很长很长很长
        </div>
        <div
          class="bui-navbar-right"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`NavBar demo snapshot > NavBar demo snapshot 0 6`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 50px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-navbar"
    >
      <div
        class="bui-navbar-left"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon bui-navbar-icon"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M16.4 48 50 17.2c1.2-1.1 1.3-3 .2-4.2-1.1-1.2-3-1.3-4.2-.2l-36 33a2.97 2.97 0 0 0 0 4.4l36 33c1.2 1.1 3.1 1 4.2-.2s1-3.1-.2-4.2L16.4 48z"
          />
        </svg>
      </div>
      <div
        class="bui-navbar-title ellipsis"
      >
        标题文案
      </div>
      <div
        class="bui-navbar-right"
      >
        文案
      </div>
    </div>
    <div
      class="bui-navbar"
    >
      <div
        class="bui-navbar-left"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon bui-navbar-icon"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M16.4 48 50 17.2c1.2-1.1 1.3-3 .2-4.2-1.1-1.2-3-1.3-4.2-.2l-36 33a2.97 2.97 0 0 0 0 4.4l36 33c1.2 1.1 3.1 1 4.2-.2s1-3.1-.2-4.2L16.4 48z"
          />
        </svg>
      </div>
      <div
        class="bui-navbar-title ellipsis"
      >
        标题文案
      </div>
      <div
        class="bui-navbar-right"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon icon-size-large"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M22 40c4.4 0 8 3.6 8 8s-3.6 8-8 8-8-3.6-8-8 3.6-8 8-8zm26 0c4.4 0 8 3.6 8 8s-3.6 8-8 8-8-3.6-8-8 3.6-8 8-8zm26 0c4.4 0 8 3.6 8 8s-3.6 8-8 8-8-3.6-8-8 3.6-8 8-8z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`NavBar demo snapshot > NavBar demo snapshot 0 7`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-navbar bui-navbar-fixed"
    >
      <div
        class="bui-navbar-left"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon bui-navbar-icon"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M16.4 48 50 17.2c1.2-1.1 1.3-3 .2-4.2-1.1-1.2-3-1.3-4.2-.2l-36 33a2.97 2.97 0 0 0 0 4.4l36 33c1.2 1.1 3.1 1 4.2-.2s1-3.1-.2-4.2L16.4 48z"
          />
        </svg>
      </div>
      <div
        class="bui-navbar-title ellipsis"
      >
        标题文案
      </div>
      <div
        class="bui-navbar-right"
      />
    </div>
    <div
      class="bui-navbar-placeholder"
      style="height: 0px;"
    />
  </div>
</div>
`;
